examples/negative/modules/missing_import.kai
# Negative fixture (#520 / modules): an `import nothing_here`
# names a module that does not exist on the search path. The
# loader prints `cannot open module ...` to stderr and the
# downstream typer reports the unbound name. Compiler exits
# non-zero.

import nothing_here

fn main() : Int = nothing_here_fn()
